# University

Abstract Algebra/BigInt/: .gitignore  BigInt.cpp  BigInt.h  CMakeLists.txt  main.cpp
Abstract Algebra/BigInt/Tests/: AlgoTests.cc  ArithmeticTests.cpp  BigIntTests.cpp  CMakeLists.txt  InitTests.cpp
Abstract Algebra/BigInt/src/: BigInt.cpp  BigInt.h  BigUint.cc  BigUint.h  CMakeLists.txt
Abstract Algebra/BigInt/src/Algorithms/: Algorithms.cc  Algorithms.h  CMakeLists.txt  Chineese.cc  Chineese.h  ElipticCurveNumber.cc  Ring.cc  Ring.h
Abstract Algebra/BigInt/src/BigInt/: BigInt.cpp  BigInt.h  BigUint.cc  BigUint.h  CMakeLists.txt
Abstract Algebra/BigInt/src/Console/: CMakeLists.txt  Console.cc  Console.h
Algorithms Theory/Distance learning/Test07.02/: solutions.tex
Algorithms Theory/Distance learning/Test23.02/: solutions.tex
Algorithms/Benchmark/: main.cpp  results.csv  results_test_1.csv  results_test_2.csv
DataBases/Test1202/: answers.aux  answers.dvi  answers.tex
DataBases/Test2602/: answers.aux  answers.dvi  answers.tex
Numerical analysis/: Num_methods_lab1.ipynb  Num_methods_lab2.ipynb
Numerical analysis/.ipynb_checkpoints/: Num_methods_lab1-checkpoint.ipynb  Num_methods_lab2-checkpoint.ipynb
ProgrammingTechnologies/test0602/: answers.aux  answers.out  answers.tex
SimpleBlockChain/: main.py  test.json
System Programming/: .gitignore
System Programming/lab1/: words1.txt  words2.txt  words3.txt
System Programming/lab1/src/: Graph.java  Main.java
System Programming/lab2/: DFATest1.txt  DFATest2.txt
System Programming/lab2/src/com/company/: DFA.java  (+2 more)
Theory of programming/: RegCoef.md
